<resources>
    <string name="core_alarm_set">Alarm Set</string>
    <string name="core_alert_message">Message</string>
    <string name="core_answer_prompt">Here is the answer to your question</string>
    <string name="core_car_event_save_confirm">Say Save, Cancel or speak the name of the event again</string>
    <string name="core_car_event_saved">Event updated</string>
    <string name="core_car_safereader_hidden_message_body">Message body hidden</string>
    <string name="core_car_sms_error_help_tts">Who would you like to send it to?</string>
    <string name="core_car_sms_error_sending">"Sorry, I couldn't send your message. Please try again"</string>
    <string name="core_car_sms_message_empty_tts">Message is empty</string>
    <string name="core_car_sms_send_confirm">Say Send, Cancel or speak your message again</string>
    <string name="core_car_sms_speak_msg_tts">Speak your message</string>
    <string name="core_car_sms_text_who">Who would you like to text?</string>
    <string name="core_car_social_final_prompt">Say Update, Cancel or speak something new</string>
    <string name="core_car_social_prompt_ex1">All</string>
    <string name="core_car_social_service_prompt">Which service would you like to update?</string>
    <string name="core_car_social_status_prompt">What would you like to say?</string>
    <string name="core_car_task_save_cancel_update_prompt">Say Save, Cancel or speak the task name again</string>
    <string name="core_car_tts_ALBUM_PROMPT_DEMAND">Which album would you like me to play?</string>
    <string name="core_car_tts_ARTIST_PROMPT_DEMAND">Which artist would you like to play?</string>
    <string name="core_car_tts_EVENT_SAY_TITLE">Say the name of your event</string>
    <string name="core_car_tts_GOTO_URL">Go to %1$s</string>
    <string name="core_car_tts_LAUNCHAPP_PROMPT_DEMAND">Which application would you like to open?</string>
    <string name="core_car_tts_MAP_OF">I will show you the map of %1$s</string>
    <string name="core_car_tts_MUSIC_PROMPT_DEMAND">Which music would you like me to play?</string>
    <string name="core_car_tts_NAVIGATE_TO">I will navigate you to %1$s</string>
    <string name="core_car_tts_NO_ALBUMMATCH_DEMAND">No matching albums found</string>
    <string name="core_car_tts_NO_APPMATCH_DEMAND">No matching applications found</string>
    <string name="core_car_tts_NO_SPOKEN_APPMATCH_DEMAND">"Sorry I'm unable to find an enabled application called '%1$s' on your device"</string>
    <string name="core_car_tts_NO_ARTISTMATCH_DEMAND">No matching artists found</string>
    <string name="core_car_tts_NO_MATCH_DEMAND_CALL">"I can't find the contact you want to call"</string>
    <string name="core_car_tts_NO_MATCH_DEMAND_MESSAGE">No matching contacts for new message. Please try again</string>
    <string name="core_car_tts_NO_MUSICMATCH_DEMAND">No matching music found</string>
    <string name="core_car_tts_NO_PLAYLISTMATCH_DEMAND">No matching playlists found</string>
    <string name="core_car_tts_NO_TITLEMATCH_DEMAND">No matching song found</string>
    <string name="core_car_tts_PLAYPLAYLIST_PROMPT_DEMAND">Which playlist would you like to hear?</string>
    <string name="core_car_tts_SAFEREADER_MULTIPLE_NEW_MESSAGES">%1$s new messages</string>
    <string name="iux_wake_up_1">"You can say &lt;font color=#007ad2>'Hi Galaxy'&lt;/font> when in S Voice or a locked screen to automatically wake up S Voice"</string>
    <string name="settings_incar_wakeup_summary">"Say 'your wake-up command' to automatically make ready for listening your command. Note: this may drain your battery"</string>
    <string name="cancel">Cancel</string>
    <string name="change_now">Change now</string>
    <string name="finish">Finish</string>
    <string name="help_menu8">About</string>
    <string name="help_wcis_text_message">Message</string>
    <string name="iux_wake_up_2">Or you can choose your own word or phrase to say</string>
    <string name="iux_wake_up_3">"You can also wake up S Voice by double-tapping the home key or by pressing the headset button 

Note: The wake-up command may consume more battery and reduce standby time. Some headsets may not work by tapping Headset button 
How to open S Voice will differ depending on manufacturer"</string>
    <string name="iux_wake_up_4">"Multiple wake-up commands are available and they can be used to complete some tasks automatically

You can also say your wake-up word followed by what you want"</string>
    <string name="iux_what_you_want_1">Say what you want after the beep</string>
    <string name="iux_what_you_want_2">You can hear voice feedback when you enable voice prompt</string>
    <string name="iux_what_you_want_3">Say what you want directly to the device</string>
    <string name="iux_handwriting_1">S Voice not only recognizes voices but also handwriting. If you detach the S Pen from the device, the following icon will appear</string>
    <string name="iux_handwriting_2">Enable Handwriting mode by tapping the icon, then you can write what you want</string>
    <string name="iux_handwriting_3">Disable Handwriting mode by tapping the icon again or attaching the S Pen to the device</string>
    <string name="iux_edit_what_you_said_1">You can edit what you said by tapping on your last speech</string>
    <string name="iux_edit_what_you_said_2">You can easily edit what you said using the virtual keyboard. Then, you can continue dialogue with your new command in S Voice</string>
    <string name="menu_custom_wake_up">Set wake-up command</string>
    <string name="next">Next</string>
    <string name="ok_uc">OK</string>
    <string name="previous">Previous</string>
    <string name="save_btn">Save</string>
    <string name="settings_advanced_useloc_summary">Use current location to improve accuracy</string>
    <string name="settings_advanced_useloc_title">Use location data</string>
    <string name="settings_autodial_dialogtitle">Auto-dial</string>
    <string name="settings_autodial_summary">Auto-dial behavior</string>
    <string name="settings_autodial_title">Auto-dial</string>
    <string name="settings_call_title">Call</string>
    <string name="settings_general">General</string>
    <string name="settings_headset_mode">Headset mode</string>
    <string name="settings_headset_mode_summary">Check your missed events when headset mode is enabled</string>
    <string name="settings_headset_mode_title">Check missed events</string>
    <string name="settings_incar_autostart_speakerphone_summary">Turn on speaker when using S Voice to make a call</string>
    <string name="settings_incar_autostart_speakerphone_title">Auto-start speaker</string>
    <string name="settings_incar_homeaddress_summary">Configure your home address</string>
    <string name="settings_incar_homeaddress_title">Home address</string>
    <string name="settings_incar_navigation">Navigate</string>
    <string name="settings_incar_speakshow_msgbodies_summary">Show message content when new message arrives</string>
    <string name="settings_incar_speakshow_msgbodies_title">Show body of message</string>
    <string name="settings_incar_wakeup">Wake up</string>
    <string name="settings_incar_wakeup_title">Wake up command</string>
    <string name="settings_language_dialogtitle">Language</string>
    <string name="settings_language_summary">Choose an input language</string>
    <string name="settings_language_title">Language</string>
    <string name="settings_launch_voicetalk_summary">Open S Voice by double pressing the home key</string>
    <string name="settings_launch_voicetalk_title">Open via the home key</string>
    <string name="settings_profanityfilter_summary">Hide potentially offensive words with asterisks</string>
    <string name="settings_profanityfilter_title">Hide offensive words</string>
    <string name="settings_social_facebook_summary">Click to log in to Facebook</string>
    <string name="settings_social_facebook_title">Facebook</string>
    <string name="settings_social_title">Social settings</string>
    <string name="settings_social_twitter_summary">Click to log in to Twitter</string>
    <string name="settings_social_twitter_title">Twitter</string>
    <string name="settings_voice_talk_help_title">Help</string>
    <string name="skip">Skip</string>
    <string name="title_notification">Notification</string>
    <string name="setting_wakeup_unlock_screen">Use wake-up command when swipe unlock is enabled</string>
    <string name="setting_wakeup_unlock_screen_title">Wake up in lock screen</string>
    <string name="voice_input_control_title">Voice control</string>
    <string name="voice_input_control_summry">Use voice commands to control device</string>
    <string name="voice_input_control_incomming_calls">Incoming calls</string>
    <string name="voice_input_control_incomming_calls_summary">You can answer or reject calls with the voice commands Answer and Reject. Speaker will turn on when you answer a call using voice command</string>
    <string name="voice_input_control_alarm">Alarm</string>
    <string name="voice_input_control_alarm_summary">You can stop or snooze alarms with the voice commands Stop and Snooze</string>
    <string name="voice_input_control_camera">Camera</string>
    <string name="voice_input_control_camera_summary">You can take pictures with voice commands Smile, Cheese, Capture and Shoot</string>
    <string name="voice_input_control_music">Music</string>
    <string name="voice_input_control_music_summary">You can control the music player with the voice commands Next, Previous, Pause, Play, Volume Up, and Volume Down</string>
    <string name="voice_input_control_radio">Radio</string>
    <string name="voice_input_control_radio_summary">You can control the FM radio with the voice commands Next, Previous, Stop, Play, Volume Up and Volume Down</string>
    <string name="handwriting_mode_on">Enable Handwriting mode</string>
    <string name="handwriting_mode_off">Disable Handwriting mode</string>
    <string name="destination">Destination</string>
    <string name="shortcut_name">Shortcut name</string>
    <string name="destination_hint">Enter an address</string>
    <string name="shortcut_name_hint">Enter a shortcut name</string>
    <string name="voice_input_control_chatonv">ChatON</string>
    <string name="voice_input_control_chatonv_summary">You can answer or reject calls with the voice commands Answer and Reject, Speaker will turn on when you answer a call using voice command</string>
    <string name="driving_mode_settings_title">Driving mode settings</string>
    <string name="driving_mode_title">Driving mode</string>
    <string name="driving_mode_description">You can use S Voice with Driving mode. The available commands are shown under What can I say. Notifications can also be read out automatically</string>
    <string name="incoming_call">Incoming call</string>
    <string name="incoming_call_notification_summary">"Read out callers' information when receiving incoming calls"</string>
    <string name="message">Message</string>
    <string name="message_notification_summary">"Read out senders' information when new messages arrive"</string>
    <string name="new_voicemail">New voicemail</string>
    <string name="new_voicemail_notification_summary">Notify when new voice mail arrives</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_notification_summary">Read out alarm information when alarms sound</string>
    <string name="schedule">Schedule</string>
    <string name="schedule_notification_summary">Read out scheduled alarm information when alarms sound</string>
    <string name="my_place_for_driving_mode">My place for Driving mode</string>
    <string name="my_place_summary_for_driving_mode">In my place, you can set your car and other places to be recognised by your device, so that it opens S Voice with Driving mode enabled automatically</string>
</resources>