<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="vlingo_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_general" android:key="general_settings">
        <ListPreference android:entries="@array/languages_names" android:title="@string/settings_language_title" android:key="language" android:summary="@string/settings_language_summary" android:defaultValue="en-US" android:dialogTitle="@string/settings_language_dialogtitle" android:negativeButtonText="@string/cancel" />
        <com.vlingo.midas.settings.TwoLineCheckBoxPreference android:persistent="true" android:title="@string/settings_launch_voicetalk_title" android:key="launch_voicetalk" android:summary="@string/settings_launch_voicetalk_summary" />
        <com.vlingo.midas.settings.TwoLineCheckBoxPreference android:persistent="true" android:title="@string/settings_advanced_useloc_title" android:key="location_enabled" android:summary="@string/settings_advanced_useloc_summary" android:defaultValue="false" />
        <com.vlingo.midas.settings.TwoLineCheckBoxPreference android:persistent="true" android:title="@string/settings_profanityfilter_title" android:key="profanity_filter" android:summary="@string/settings_profanityfilter_summary" android:defaultValue="true" />
        <com.vlingo.midas.settings.TwoLinePreference android:title="@string/settings_voice_talk_help_title" android:key="help_voice_talk" />
        <com.vlingo.midas.settings.TwoLinePreference android:title="@string/help_menu8" android:key="help_about" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/driving_mode_title" android:key="driving_mode_category" />
    <SwitchPreferenceScreen android:title="@string/driving_mode_title" android:key="driving_mode" android:fragment="com.vlingo.midas.settings.DrivingModeSettings" />
    <PreferenceCategory android:title="@string/voice_input_control_title" android:key="voice_input_control_category" />
    <SwitchPreferenceScreen android:title="@string/voice_input_control_title" android:key="voice_input_control" android:summary="@string/voice_input_control_summry" android:fragment="com.vlingo.midas.settings.VoiceInputControlSettings" />
    <PreferenceCategory android:title="@string/settings_call_title" android:key="call">
        <ListPreference android:entries="@array/auto_dial_preference" android:title="@string/settings_autodial_title" android:key="auto_dial" android:summary="@string/settings_autodial_summary" android:defaultValue="confident" android:dialogTitle="@string/settings_autodial_dialogtitle" android:negativeButtonText="@string/cancel" android:entryValues="@array/auto_dial_preference_values" />
        <com.vlingo.midas.settings.TwoLineCheckBoxPreference android:persistent="true" android:title="@string/settings_incar_autostart_speakerphone_title" android:key="car_auto_start_speakerphone" android:summary="@string/settings_incar_autostart_speakerphone_summary" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/help_wcis_text_message" android:key="message">
        <com.vlingo.midas.settings.TwoLineCheckBoxPreference android:persistent="true" android:title="@string/settings_incar_speakshow_msgbodies_title" android:key="car_safereader_read_message" android:summary="@string/settings_incar_speakshow_msgbodies_summary" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_incar_wakeup" android:key="car_wakeup">
        <com.vlingo.midas.settings.TwoLineCheckBoxPreference android:persistent="true" android:title="@string/settings_incar_wakeup_title" android:key="car_word_spotter_enabled" android:summary="@string/settings_incar_wakeup_summary" android:defaultValue="true" />
        <com.vlingo.midas.settings.TwoLineCheckBoxPreference android:persistent="true" android:title="@string/setting_wakeup_unlock_screen_title" android:key="wake_up_lock_screen" android:summary="@string/setting_wakeup_unlock_screen" android:defaultValue="false" />
        <com.vlingo.midas.settings.TwoLinePreference android:title="@string/menu_custom_wake_up" android:key="key_set_wake_up_command" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_headset_mode" android:key="headsetmode">
        <com.vlingo.midas.settings.TwoLineCheckBoxPreference android:persistent="true" android:title="@string/settings_headset_mode_title" android:key="headset_mode" android:summary="@string/settings_headset_mode_summary" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_incar_navigation" android:key="car_nav_settings">
        <EditTextPreference android:title="@string/settings_incar_homeaddress_title" android:key="car_nav_home_address" android:summary="@string/settings_incar_homeaddress_summary" android:positiveButtonText="@string/ok_uc" android:negativeButtonText="@string/cancel" />
        <EditTextPreference android:title="@string/settings_incar_officeaddress_title" android:key="car_nav_office_address" android:summary="@string/settings_incar_officeaddress_summary" android:positiveButtonText="@string/ok_uc" android:negativeButtonText="@string/cancel" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_social_title" android:key="social_settings_category">
        <com.vlingo.midas.settings.ImagePreference android:title="@string/settings_social_facebook_title" android:key="facebook_account" android:summary="@string/settings_social_facebook_summary" />
        <com.vlingo.midas.settings.ImagePreference android:title="@string/settings_social_twitter_title" android:key="twitter_account" android:summary="@string/settings_social_twitter_summary" />
    </PreferenceCategory>
</PreferenceScreen>