<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="voice_input_control_title"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/voice_input_control_title" android:key="voice_input_control" />
    <CheckBoxPreference android:title="@string/voice_input_control_incomming_calls" android:key="voice_input_control_incomming_calls" android:summary="@string/voice_input_control_incomming_calls_summary" />
    <CheckBoxPreference android:title="@string/voice_input_control_chatonv" android:key="voice_input_control_chatonv" android:summary="@string/voice_input_control_chatonv_summary" />
    <CheckBoxPreference android:title="@string/voice_input_control_alarm" android:key="voice_input_control_alarm" android:summary="@string/voice_input_control_alarm_summary" />
    <CheckBoxPreference android:title="@string/voice_input_control_camera" android:key="voice_input_control_camera" android:summary="@string/voice_input_control_camera_summary" />
    <CheckBoxPreference android:title="@string/voice_input_control_music" android:key="voice_input_control_music" android:summary="@string/voice_input_control_music_summary" />
    <CheckBoxPreference android:title="@string/voice_input_control_radio" android:key="voice_input_control_radio" android:summary="@string/voice_input_control_radio_summary" />
</PreferenceScreen>