<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textStyle="bold" android:id="@id/text_destination" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/destination" />
    <EditText android:id="@id/edit_address" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:hint="@string/destination_hint" android:singleLine="true" android:imeOptions="actionNext" />
    <TextView android:textStyle="bold" android:id="@id/text_shortcutname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/shortcut_name" />
    <EditText android:id="@id/edit_shortcutname" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:hint="@string/shortcut_name_hint" android:singleLine="true" android:imeOptions="actionDone" />
    <Button android:layout_gravity="center" android:id="@id/btn_save" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save_btn" />
</LinearLayout>