<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/iux_how_to_use_rl"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/scroll_container" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/btn_container">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="17.0sp" android:textColor="#fff5f5f5" android:id="@id/description_what_you_want_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="12.0dip" android:text="@string/iux_what_you_want_1" />
            <ImageView android:layout_gravity="center_horizontal" android:id="@id/iux_help_1" android:src="@drawable/voice_talk_setting_help_1" style="@style/iux_how_to_use_iux_help_1" />
            <TextView android:textSize="17.0sp" android:textColor="#fff5f5f5" android:id="@id/description_what_you_want_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip" android:text="@string/iux_what_you_want_2" />
            <ImageView android:layout_gravity="center_horizontal" android:id="@id/iux_help_2" android:src="@drawable/voice_talk_setting_help_2" style="@style/iux_how_to_use_iux_help_2" />
            <TextView android:textSize="17.0sp" android:textColor="#fff5f5f5" android:id="@id/description_what_you_want_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip" android:text="@string/iux_what_you_want_3" />
            <ImageView android:layout_gravity="center_horizontal" android:id="@id/iux_help_3" android:src="@drawable/voice_talk_setting_help_3" style="@style/iux_how_to_use_iux_help_3" />
            <ImageView android:layout_gravity="center_horizontal" android:id="@id/iux_help_4" android:src="@drawable/voice_talk_setting_help_4" style="@style/iux_how_to_use_iux_help_4" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:gravity="center_horizontal" android:id="@id/btn_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:id="@id/previous" android:text="@string/previous" android:layout_weight="1.0" style="@style/IUXPrevBTN" />
        <Button android:id="@id/skip" android:text="@string/skip" android:layout_weight="1.0" style="@style/IUXDefaultBTN" />
        <Button android:id="@id/next" android:text="@string/next" android:layout_weight="1.0" style="@style/IUXNextBTN" />
    </LinearLayout>
</RelativeLayout>